--- a/sources/bootstrapEdited.css
+++ b/sources/bootstrapEdited.css
@@ -207,11 +207,11 @@ sup {
 }
 
 a {
-  color: #0d6efd;
+  color: white;
   text-decoration: underline;
 }
 a:hover {
-  color: #0a58ca;
+  color: gray;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -307,6 +307,7 @@ label {
 
 button {
   border-radius: 0;
+  background-color: black;
 }
 
 button:focus {
